# rag-system

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
common/: README.md  __init__.py  config.py  exceptions.py  observability.py  schemas.py  testing.py
components/parser/: README.md  api.py  cli.py  config.py  exceptions.py  logging_setup.py  pipeline.py
components/parser/components/: code.py  docling_strategy.py  ocr_cloud.py  ocr_local.py  pypdf_strategy.py  simple.py  structured.py  tabular.py
components/parser/debug/: artifact_manager.py
components/parser/routing/: router.py  scanned_detector.py
docs/superpowers/specs/: 2026-07-07-monorepo-restructure-design.md
rag_parser/: api.py  cli.py  config.py  exceptions.py  logging_setup.py  pipeline.py
rag_parser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rag_parser/components/: base.py  code.py  docling_strategy.py  ocr_cloud.py  ocr_local.py  pypdf_strategy.py  simple.py  structured.py  tabular.py
rag_parser/debug/: artifact_manager.py
rag_parser/routing/: router.py  scanned_detector.py
tests/: test_pipeline.py  test_routing.py
tests/common/: test_config.py  test_exceptions.py  test_logging.py  test_observability.py  test_schemas.py  test_testing.py
tests/fixtures/: sample.csv  sample.html  sample.json  sample.md  sample.py  sample.txt
tests/parser/: conftest.py  test_code.py  test_pipeline.py  test_routing.py  test_simple.py  test_structured.py  test_tabular.py
tests/test_components/: test_code.py  test_simple.py  test_structured.py  test_tabular.py
