[project]
name = "rag-platform"
version = "0.1.0"
description = "Production-grade RAG ingestion pipeline, built on Haystack"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "haystack-ai>=2.30",
    "pydantic-settings>=2.0",
    "typer>=0.9",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "structlog>=24.0",
    "pdf2image>=1.16",
    "pytesseract>=0.3",
    "tree-sitter>=0.20",
    "tree-sitter-python>=0.20",
    "pyyaml>=6.0",
    "python-multipart>=0.0",
    "docling-haystack>=1.1.0",
    "mistral-haystack>=1.0.0",
    "httpx>=0.25",
]

[tool.setuptools.packages.find]
include = ["common*", "components/parser*"]
